[package]
name = "routeradar"
version = "0.1.0"
edition = "2021"
description = "yoyoyoyoyoyoooooooooooooooooooooooooo"
authors = ["CinematicCow <cinematiccow@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.10", features=['derive']}
walkdir = "2"
serde = {version="1.0.193", features=['derive']}
serde_json = "1.0.108"
schemars = "0.8.16"
